SET(PYTHON_IGNORE_LIBRARY ON)
MESSAGE( STATUS "Enable Testing...")
add_subdirectory(blas)
IF ( LAPACK AND (LAPACK_API_VERSION STREQUAL "3.6.1" OR LAPACK_API_VERSION STREQUAL "3.6.1-wodprc"))
    FIND_PACKAGE(PythonInterp)
    add_subdirectory(lapack-3.6.1)
ENDIF()
IF ( LAPACK AND (LAPACK_API_VERSION STREQUAL "3.7.0" OR LAPACK_API_VERSION STREQUAL "3.7.0-wodprc"))
    FIND_PACKAGE(PythonInterp)
    add_subdirectory(lapack-3.7.0)
ENDIF()
IF ( LAPACK AND (LAPACK_API_VERSION STREQUAL "3.7.1" OR LAPACK_API_VERSION STREQUAL "3.7.1-wodprc"))
    FIND_PACKAGE(PythonInterp)
    add_subdirectory(lapack-3.7.0)
ENDIF()
IF ( LAPACK AND (LAPACK_API_VERSION STREQUAL "3.8.0" OR LAPACK_API_VERSION STREQUAL "3.8.0-wodprc"))
    FIND_PACKAGE(PythonInterp)
    add_subdirectory(lapack-3.8.0)
ENDIF()

IF ( LAPACK AND (LAPACK_API_VERSION STREQUAL "3.9.0" OR LAPACK_API_VERSION STREQUAL "3.9.0-wodprc"))
    FIND_PACKAGE(PythonInterp)
    add_subdirectory(lapack-3.9.0)
ENDIF()

IF ( LAPACK AND (LAPACK_API_VERSION STREQUAL "3.9.1" OR LAPACK_API_VERSION STREQUAL "3.9.1-wodprc"))
    FIND_PACKAGE(PythonInterp)
    add_subdirectory(lapack-3.9.1)
ENDIF()

IF ( LAPACK AND (LAPACK_API_VERSION STREQUAL "3.10.0" OR LAPACK_API_VERSION STREQUAL "3.10.0-wodprc"))
    FIND_PACKAGE(PythonInterp)
    add_subdirectory(lapack-3.10.0)
ENDIF()

IF ( LAPACK AND (LAPACK_API_VERSION STREQUAL "3.10.1" OR LAPACK_API_VERSION STREQUAL "3.10.1-wodprc"))
    FIND_PACKAGE(PythonInterp)
    add_subdirectory(lapack-3.10.1)
ENDIF()

IF ( LAPACK AND (LAPACK_API_VERSION STREQUAL "3.11.0" OR LAPACK_API_VERSION STREQUAL "3.11.0-wodprc"))
    FIND_PACKAGE(PythonInterp)
    add_subdirectory(lapack-3.11.0)
ENDIF()

IF ( LAPACK AND (LAPACK_API_VERSION STREQUAL "3.12.0" OR LAPACK_API_VERSION STREQUAL "3.12.0-wodprc"))
    FIND_PACKAGE(PythonInterp)
    add_subdirectory(lapack-3.12.0)
ENDIF()


