MESSAGE( STATUS "Enable Testing...")
add_subdirectory(blas)
SET(SUBDIR "none")
IF ( LAPACK AND (LAPACK_API_VERSION STREQUAL "3.6.1" OR LAPACK_API_VERSION STREQUAL "3.6.1-wodprc"))
    SET(SUBDIR lapack-3.6.1)
ENDIF()
IF ( LAPACK AND (LAPACK_API_VERSION STREQUAL "3.7.0" OR LAPACK_API_VERSION STREQUAL "3.7.0-wodprc"))
    SET(SUBDIR lapack-3.7.0)
ENDIF()
IF ( LAPACK AND (LAPACK_API_VERSION STREQUAL "3.7.1" OR LAPACK_API_VERSION STREQUAL "3.7.1-wodprc"))
    SET(SUBDIR lapack-3.7.0)
ENDIF()
IF ( LAPACK AND (LAPACK_API_VERSION STREQUAL "3.8.0" OR LAPACK_API_VERSION STREQUAL "3.8.0-wodprc"))
    SET(SUBDIR lapack-3.8.0)
ENDIF()

IF ( LAPACK AND (LAPACK_API_VERSION STREQUAL "3.9.0" OR LAPACK_API_VERSION STREQUAL "3.9.0-wodprc"))
    SET(SUBDIR lapack-3.9.0)
ENDIF()

IF ( LAPACK AND (LAPACK_API_VERSION STREQUAL "3.9.1" OR LAPACK_API_VERSION STREQUAL "3.9.1-wodprc"))
    SET(SUBDIR lapack-3.9.1)
ENDIF()

IF ( LAPACK AND (LAPACK_API_VERSION STREQUAL "3.10.0" OR LAPACK_API_VERSION STREQUAL "3.10.0-wodprc"))
    SET(SUBDIR lapack-3.10.0)
ENDIF()

IF ( LAPACK AND (LAPACK_API_VERSION STREQUAL "3.10.1" OR LAPACK_API_VERSION STREQUAL "3.10.1-wodprc"))
    SET(SUBDIR lapack-3.10.1)
ENDIF()

IF ( LAPACK AND (LAPACK_API_VERSION STREQUAL "3.11.0" OR LAPACK_API_VERSION STREQUAL "3.11.0-wodprc"))
    SET(SUBDIR lapack-3.11.0)
ENDIF()

IF ( LAPACK AND (LAPACK_API_VERSION STREQUAL "3.12.0" OR LAPACK_API_VERSION STREQUAL "3.12.0-wodprc"))
    SET(SUBDIR lapack-3.12.0)
ENDIF()
IF (NOT SUBDIR STREQUAL "none")
    add_subdirectory(${SUBDIR})
    SET(LAPACK_TEST_DIR "${CMAKE_CURRENT_BINARY_DIR}/${SUBDIR}" PARENT_SCOPE)
    SET(RUN_TEST_SUMMARY 1 PARENT_SCOPE)
    MESSAGE(STATUS "Execute Test Summary after testing")
        configure_file(
            "${PROJECT_SOURCE_DIR}/CTestCustom.cmake.in"
            "${PROJECT_BINARY_DIR}/CTestCustom.cmake"
            @ONLY
            )
ENDIF()
